--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <g transform="translate(100 100) scale(1 -1)" id="space"></g>
     </svg>
     <div class="settings">
-      <input type="range" min="0" max="1" step="any" value="1" id="volume" />
+      <input type="range" min="0" max="1" step="any" value="1" id="volume-range" />
+      <input type="range" min="0" max="1" step="any" value="0" id="dist-gain-range" />
       <input type="button" value="Randomize" id="randomize-button" />
     </div>
     <script src="scripts/app.js"></script>
