--- a/index.html
+++ b/index.html
@@ -11,9 +11,29 @@
       <g transform="translate(100 100) scale(1 -1)" id="space"></g>
     </svg>
     <div class="settings">
-      <input type="range" min="0" max="1" step="any" value="1" id="volume-range" />
-      <input type="range" min="0" max="1" step="any" value="0" id="dist-gain-range" />
-      <input type="button" value="Randomize" id="randomize-button" />
+      <table>
+        <tbody>
+          <tr>
+            <th>volume</th>
+            <td>
+              <input type="range" min="0" max="1" step="any" value="1" id="volume-range" />
+            </td>
+          </tr>
+          <tr>
+            <th>distortion</th>
+            <td>
+              <input type="range" min="0" max="1" step="any" value="0" id="dist-gain-range" />
+            </td>
+          </tr>
+          <tr>
+            <th>feedback</th>
+            <td>
+              <input type="range" min="0" max="1" step="any" value="0.8" id="fb-gain-range" />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+          <input type="button" value="randomize" id="randomize-button" />
     </div>
     <script src="scripts/app.js"></script>
   </body>
