--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title> The Discord of the World </title>
+    <title> The Discord of the Weoreld </title>
     <link href="styles/app.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
